@@ -1,5 +1,8 @@
 2005-08-29  Shiro Kawai  <shiro@acm.org>
 
+	* dbd_mysqllib.stub (mysql-real-escape-string): added.
+	* dbd/mysql.scm (dbi-escape-sql): ditto.
+
 	* adapted to the API change in Gauche 0.8.6_pre2.
 
 2005-08-16  Shiro Kawai  <shiro@acm.org>
